change image on family tree

--- a/src/family.html
+++ b/src/family.html
@@ -11,7 +11,7 @@ title: Family Facts
     <div class="family-row1-container">
 
         <img src="/img/bern and mu.jpg" alt="Bernard and Muriel photo" class="bern-mu-photo">
-        <p class="bern-caption"><b>Bernard F. Dillon with his wife Muriel</b> </p> 
+        <p class="bern-caption"><b>Bernard F. Dillon with his wife, Muriel</b> </p> 
 
     </div>
 
@@ -44,7 +44,7 @@ title: Family Facts
                 <p class="row3-caption ant-caption"><b>Anthony Dillon</b> Comp' Programmer</p>
             </div>
             <div class="tree-mark">
-                <img src="/img/Ant.jpg" alt="Mark Photo" class="row3-photo">
+                <img src="/img/Mark.jpg" alt="Mark Photo" class="row3-photo">
                 <p class="row3-caption mark-caption"><b>Mark Dillon</b> Foreign Office</p>
             </div>
             <div class="tree-jamie">
