--- a/src/gallery.html
+++ b/src/gallery.html
@@ -12,6 +12,18 @@ title: The Gallery
         <div class="gallery-image-container">
             <img src="/img/Bern gallery photo.jpg" alt="Bern photo" class="gallery-main-image">
         </div>
+
+        <div class="gallery-content">
+            <p>A photograph of the seventy three year old artist, Bernard Francis Dillon, opens his gallery in which numerous drawings and paintings are exhibited.</p>
+
+            <p>The earliest works date back over fifty years to when he was a part time student at the Hammersmith College of Art, Lime Grove. He was studying anatomy and life drawing under the guidance of his tutor, CAREL WEIGHT, R.A.</p>
+
+            <p>As Carel Weight was professor of painting at the Royal College of Art as well as being a Royal Acadamy Trustee considerable information about him can be found on the internet.</p>
+
+            <p>As is widely known, Dillon spent most of his working life painting for a living and, before Letraset and computers were introduced to the world, this had to include lettering. Today, eight years after his official retirement, he continues to sit at his easel painting ‘what he wants, when he wants’. He says that he is now in a position to survive without the need to seek commissions.</p>
+
+            <p>However, this is not the case for his two sons, STEVE DILLON and GLYN DILLON for they are, as already mentioned, both professional artists with much being written about them on the internet. His daughter, Julie, is also artistic but has chosen to remain an amateur expressing her creative side in tapestry. His grandson, MARK DILLON, is also a professional artist and lecturer having acquired his fine arts Masters Degree, MFA. at Slade in London.</p>
+        </div>
     </div>
 
 </div>    
