add gallery carousel

--- a/src/family.html
+++ b/src/family.html
@@ -22,15 +22,15 @@ title: Family Facts
         <div class="family-row2-container">
             <div class="tree-steve">
                 <img src="/img/stevedillon.jpg" alt="Steve photo" class="row2-photo">
-                <p class="row2-caption"><b> Steve Dillon</b> Professional Artist</p> 
+                <p class="row2-caption steve-caption"><b> Steve Dillon</b> Professional Artist</p> 
             </div>
             <div class="tree-julie">   
                 <img src="/img/julie.jpg" alt="Julie photo" class="row2-photo">
-                <p class="row2-caption"><b>Julie Bleaden</b> Autism Advisor</p> 
+                <p class="row2-caption julie-caption"><b>Julie Bleaden</b> Autism Advisor</p> 
             </div> 
             <div class="tree-glyn"> 
                 <img src="/img/glyn.jpg" alt="Glyn photo" class="row2-photo">
-                <p class="row2-caption"><b>Glyn Dillon</b> Professional Artist</p>
+                <p class="row2-caption glyn-caption"><b>Glyn Dillon</b> Professional Artist</p>
             </div>    
         </div>
     </div>
