--- a/src/gallery.html
+++ b/src/gallery.html
@@ -14,7 +14,7 @@ title: The Gallery
         </div>
 
         <div class="gallery-content">
-            <p>A photograph of the seventy three year old artist, Bernard Francis Dillon, opens his gallery in which numerous drawings and paintings are exhibited.</p>
+            <p>A photograph of the seventy-three year old artist, Bernard Francis Dillon, opens his gallery in which numerous drawings and paintings are exhibited.</p>
 
             <p>The earliest works date back over fifty years to when he was a part time student at the Hammersmith College of Art, Lime Grove. He was studying anatomy and life drawing under the guidance of his tutor, CAREL WEIGHT, R.A.</p>
 
@@ -24,6 +24,235 @@ title: The Gallery
 
             <p>However, this is not the case for his two sons, STEVE DILLON and GLYN DILLON for they are, as already mentioned, both professional artists with much being written about them on the internet. His daughter, Julie, is also artistic but has chosen to remain an amateur expressing her creative side in tapestry. His grandson, MARK DILLON, is also a professional artist and lecturer having acquired his fine arts Masters Degree, MFA. at Slade in London.</p>
         </div>
+
+        <div class="carousel">
+            <div class="carousel__item carousel__item--visible">
+                <img src="/img/02 Bern Sr. drawing.jpg" alt="">
+                <p class="art-caption">A portrait of the artist's father, Bernard Francis Dillon Snr., drawn in 1973</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/03 Life Drawing.jpg" alt="">
+                <p class="art-caption">A sample of Dillon’s student work from sixty-two years ago.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/04 Life Drawing.jpg" alt="">
+                <p class="art-caption">Another example of his 1957 life drawings whilst being tutored by CAREL WEIGHT R.A.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/05 Bishop sketch.jpg" alt="">
+                <p class="art-caption">The artist’s first preliminary composition sketch of the Right Rev’ Dr., Alan Smith, 10th. Bishop of St. Albans, before embarking on the painted portrait.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/06 Bishop finished.jpg" alt="">
+                <p class="art-caption">The finished portrait. Oil on canvas 30″ x 24″</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/07 Bishop painting presentation.jpg" alt="">
+                <p class="art-caption">The presentation of the painting.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/08 Young Glyn sketch.jpg" alt="">
+                <p class="art-caption">A sketch of his youngest son, Glyn, made forty-two years ago in 1980.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/09 Life Drawing.jpg" alt="">
+                <p class="art-caption">Life drawing class 1957-58</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/10 watercolour sketch.jpg" alt="">
+                <p class="art-caption">A water colour sketch in preparation for a wall mural 16′ x 8′</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/11 Barn painting detail.jpg" alt="">
+                <p class="art-caption">Detail of larger painting, 1966. Oil on board, 32″ x 23″</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/12 Muriel sketch.jpg" alt="">
+                <p class="art-caption">Sketch of Artist’s wife, Muriel. 1979</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/13 Fox painting.jpg" alt="">
+                <p class="art-caption">“Have they gone?” Exhibited in The Royal Society of Miniature Painters. 2012</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/14 Cottage watercolour.jpg" alt="">
+                <p class="art-caption">“Hopkin’s Cottage”, Watercolor. 1997</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/15 Deer painting.jpg" alt="">
+                <p class="art-caption">“Woodland Deer”, Oil on canvas, 30″ x 24″</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/16 Island painting.jpg" alt="">
+                <p class="art-caption">Detail from larger painting, 1997. Oil on Board</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/17 Student sketches.jpg" alt="">
+                <p class="art-caption">From student sketches, 1957-58</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/18 River painting.jpg" alt="">
+                <p class="art-caption">“Snow by the river”. 1997 Watercolour</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/19 Spaniel Inn.jpg" alt="">
+                <p class="art-caption">Privately commissioned double sided sign. Oil on board. Exported to Californian clients in 1969.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/20 owl painting.jpg" alt="">
+                <p class="art-caption">“Moonlight Supper” Oil on Board, 15.75″ x 11.5″. 2012</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/21 Life Drawing.jpg" alt="">
+                <p class="art-caption">Life drawing sessions 1957-58</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/22 Steve drawing.jpg" alt="">
+                <p class="art-caption">Unfinished pencil drawing of his eldest son, Steve, in 1978. He became a professional artist in 1979.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/23 watercolour sketch.jpg" alt="">
+                <p class="art-caption">A quick watercolour sketch in preparation for a larger painting. 1997</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/24 Julie sketch.jpg" alt="">
+                <p class="art-caption">A pencil sketch of his only daughter, Julie, in 1979. She is now an advisor in the care and education of Autistic children.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/25 Umbilical Strangulation.jpg" alt="">
+                <p class="art-caption">“Umbilical Strangulation” Oil on board, 36″ x 20″. Exhibited in the 2013/14 Annual Exhibition held in the Municipal Art Gallery and Museum of Luton.</p> 
+                <p class="art-caption">Owing to the popularity of Bernard F. Dillon’s occasional side step into the realms of Surrealism there are very few to exhibit here. The vast majority of them are already in private collections.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/26 Young Glyn sketch.jpg" alt="">
+                <p class="art-caption">A pencil sketch of his seven year old son, Glyn, in 1978. Eleven years later he became a professional artist, a graphic novelist and a costume designer</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/27 Life Drawing.jpg" alt="">
+                <p class="art-caption">Life studies, drawn at Hammersmith College of Art, in 1958.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/28 House watercolour.jpg" alt="">
+                <p class="art-caption">“Soon be home” Watercolour 1978.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/29 Self portrait.jpg" alt="">
+                <p class="art-caption">Mirror image self portrait drawn by the artist thirty-eight years ago in 1984.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/30 Life Drawing.jpg" alt="">
+                <p class="art-caption">Life drawings taken from his student sketch pad, 1957-58.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/31 Cutenhoe Road.jpg" alt="">
+                <p class="art-caption">Cutenhoe Road, Luton. Watercolour 2001</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/32 Daniel Dillon drawing.jpg" alt="">
+                <p class="art-caption">The artist, Bernard Dillon, aged four. Drawn by his Uncle, Daniel Dillon 1944.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/33 Umbilical detail.jpg" alt="">
+                <p class="art-caption">Detail taken of larger oil painting, Umbilical Strangulation.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/34 Life Drawing.jpg" alt="">
+                <p class="art-caption">Further Life Drawing completed at Lime Grove Art College, 1957-58</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/35 Ship painting.jpg" alt="">
+                <p class="art-caption">“Operation Rescue” Oil on canvas, 30″ x 24″</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/36 Sunset painting.jpg" alt="">
+                <p class="art-caption">“After the Storm” Oil on board, 36.5″ x 20.5″</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/37 Young Glyn sketch.jpg" alt="">
+                <p class="art-caption">Quick sketch of Dillon’s youngest sonm, Glyn. 1986.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/38 Glyn House.jpg" alt="">
+                <p class="art-caption">“The Edwardian Dream” Oil on Canvas, 30″ x 24″. 2012</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/39 Luton painting.jpg" alt="">
+                <p class="art-caption">"Luton's Personal Sacrifice, (near and far) by Bernard Francis Dillon. Oil on Board, 42" high.</p>
+                <p class="art-caption">The painting was exhibited in the Luton Museum's Annual Art Exhibition 2013 sponsored by the Murry Barford Trust. The Judges awarded it the 'Inspired by Luton' Prize.</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/40 Award presentation.jpg" alt="">
+                <p class="art-caption">The Deputy Mayor of Luton, Councillor Zia, presenting 'The Inspired by Luton' Annual Art Award to Bernard Dillon</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/41 Kelvin Hopkins painting.jpg" alt="">
+                <p class="art-caption">Portrait of Kelvin Hopkins MP. Oil on Canvas 30" x 24"</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/42 Kelvin painting presentation.jpg" alt="">
+                <p class="art-caption">Kelvin Hopkins MP receving his portrait, 29th March 2014</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/43 St Albans pub painting.jpg" alt="">
+                <p class="art-caption">"St. Albans in a Bygone Era" by Bernard F. DIllon. Oil on Panel, 50cm x 40cm</p>
+            </div>
+            <div class="carousel__item">
+                <img src="/img/44 Bernie.jpg" alt="">
+                <p class="art-caption">"Bernie" Oil on panel, by Bernard Dillon (unfinished). 495mm x 400mm</p>
+            </div>
+
+
+            <div class="carousel__actions">
+                <button id="carousel_button--prev" aria-label="previous slide"><</button>
+                <button id="carousel_button--next" aria-label="next slide">></button>
+            </div>
+        </div>
     </div>
 
 </div>    
+
+<script> 
+    
+    let slidePosition = 0;
+    const slides = document.getElementsByClassName('carousel__item');
+    const totalSlides = slides.length; 
+
+    document. 
+        getElementById('carousel_button--next')
+        .addEventListener("click", function() {
+            moveToNextSlide();
+        });
+    document. 
+        getElementById('carousel_button--prev')
+        .addEventListener("click", function() {
+            moveToPrevSlide();
+        });    
+
+    function updateSlidePosition() {
+        for (let slide of slides) {
+            slide.classList.remove('carousel__item--visible');
+            slide.classList.add('carousel__item--hidden');
+        }
+
+        slides[slidePosition].classList.add('carousel__item--visible');
+    }    
+    
+    function moveToNextSlide() {
+        if (slidePosition == totalSlides - 1) {
+            slidePosition = 0;
+        } else {
+            slidePosition++;
+        }
+        updateSlidePosition();
+    }
+
+    function moveToPrevSlide() {   
+        if (slidePosition == 0) {
+            slidePosition = totalSlides - 1;
+        } else {
+            slidePosition--;
+        }
+        updateSlidePosition();
+    }
+
+</script>
