add homepage gallery carousel

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -169,7 +169,7 @@ title: The Gallery
             </div>
             <div class="carousel__item">
                 <img src="/img/37 Young Glyn sketch.jpg" alt="">
-                <p class="art-caption">Quick sketch of Dillon’s youngest sonm, Glyn. 1986.</p>
+                <p class="art-caption">Quick sketch of Dillon’s youngest son, Glyn. 1986.</p>
             </div>
             <div class="carousel__item">
                 <img src="/img/38 Glyn House.jpg" alt="">
