add link destinations

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ title: Home
 
             <p class="home-words">BRITISH ARTIST, Bernard Francis Dillon, was born in Paddington, London, during August 1940. His mother was from the mining valleys of South Wales whilst his father was a Londoner of Irish descent.</p>
 
-            <a href="#" class="read-more-button">READ MORE</a>        
+            <a href="http://localhost:8080/about/" class="read-more-button">READ MORE</a>        
         </div>
 
         <div class="home-image-container">
@@ -50,7 +50,7 @@ title: Home
         </div>
 
         <div class="view-gallery-button-container">
-            <a href="#" class="view-gallery-button">VIEW GALLERY</a>  
+            <a href="http://localhost:8080/gallery/" class="view-gallery-button">VIEW GALLERY</a>  
         </div>
 
     </div>    
