--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,9 @@ title: Home
     </div>    
 </div>
 
-<script>
+<script src="/js/homecarousel.js"></script>
+
+<!-- <script>
 
     let slidePosition = 0;
     const slides = document.getElementsByClassName('home__carousel__item');
@@ -100,5 +102,5 @@ title: Home
         updateSlidePosition();
     }
     
-</script>
+</script> -->
 
