fix alignment on homepage carousel

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@ title: Home
         <h2 class="recent-works-title" >Recent works</h2>
 
         <div class="home__carousel">
+            <div class="home-carousel__track-container">
             <div class="home__carousel__item home__carousel__item--visible">
                 <img src="/img/35 Ship painting.jpg" alt="Ship painting" class="works-image">
             </div>
@@ -48,11 +49,14 @@ title: Home
                 <button id="home__carousel_button--next" aria-label="next slide">></button>
             </div>            
         </div>
+        </div>
+
+
 
         <div class="view-gallery-button-container">
             <a href="http://localhost:8080/gallery/" class="view-gallery-button">VIEW GALLERY</a>  
         </div>
-
+        
     </div>    
 </div>
 
