change font color in family tree

--- a/src/family.html
+++ b/src/family.html
@@ -74,12 +74,18 @@ title: Family Facts
 
     <div class="family-row4-section">
         <div class="ant-kids-container">
+
+            <p class="row4-caption-parent"><u>Anthony</u></p>
+
             <p class="row4-caption"><b>Chloe Dillon</b> Education</p>
 
             <p class="row4-caption"><b>Archie Dillon</b> Education</p>
         </div>
 
         <div class="mark-kids-container">
+
+            <p class="row4-caption-parent"><u>Mark</u></p>
+
             <p class="row4-caption"><b>Jasper Dillon</b> Education</p>
 
             <p class="row4-caption"><b>Kurtis Dillon</b> A baby</p> 
