--- a/src/gallery.html
+++ b/src/gallery.html
@@ -16,7 +16,7 @@ title: The Gallery
         <div class="gallery-content">
             <p>A photograph of the seventy-three year old artist, Bernard Francis Dillon, opens his gallery in which numerous drawings and paintings are exhibited.</p>
 
-            <p>The earliest works date back over fifty years to when he was a part time student at the Hammersmith College of Art, Lime Grove. He was studying anatomy and life drawing under the guidance of his tutor, CAREL WEIGHT, R.A.</p>
+            <p>The earliest works date back over sixty years to when he was a part time student at the Hammersmith College of Art, Lime Grove. He was studying anatomy and life drawing under the guidance of his tutor, CAREL WEIGHT, R.A.</p>
 
             <p>As Carel Weight was professor of painting at the Royal College of Art as well as being a Royal Acadamy Trustee considerable information about him can be found on the internet.</p>
 
