design mobile family tree

--- a/src/awards.html
+++ b/src/awards.html
@@ -5,7 +5,7 @@ title: Awards and Exhibitions
 
 <div class="awards-section">
 
-    <h1>{{ title }}</h1>
+    <h1 class="awards-title">{{ title }}</h1>
     <h3>OVER THE YEARS</h3>
 
     <div class="awards-container">
