--- a/src/family.html
+++ b/src/family.html
@@ -38,35 +38,40 @@ title: Family Facts
 
     <div class="family-row3-section">
         <div class="family-row3-container">
-            <div class="tree-ant">
-                <img src="/img/Ant.jpg" alt="Ant photo" class="row3-photo">
-                <p class="row3-caption ant-caption"><b>Anthony Dillon</b> Comp' Programmer</p>
+            <div class="steve-kids">
+                <div class="tree-ant">
+                    <img src="/img/Ant.jpg" alt="Ant photo" class="row3-photo">
+                    <p class="row3-caption ant-caption"><b>Anthony Dillon</b> Comp' Programmer</p>
+                </div>
+                <div class="tree-mark">
+                    <img src="/img/Mark.jpg" alt="Mark Photo" class="row3-photo">
+                    <p class="row3-caption mark-caption"><b>Mark Dillon</b> Foreign Office</p>
+                </div>
+                <div class="tree-jamie">
+                    <img src="/img/Jamie 2.jpg" alt="Jamie Photo" class="row3-photo">
+                    <p class="row3-caption jamie-caption"><b>Jamie Dillon</b> Web Developer</p>
+                </div>
             </div>
-            <div class="tree-mark">
-                <img src="/img/Mark.jpg" alt="Mark Photo" class="row3-photo">
-                <p class="row3-caption mark-caption"><b>Mark Dillon</b> Foreign Office</p>
+            <div class="julie-kids">
+                <div class="tree-emily">
+                    <img src="/img/julie.jpg" alt="Emily Photo" class="row3-photo">
+                    <p class="row3-caption emily-caption"><b>Emily Bleaden</b> Nursery Nurse</p>
+                </div>
+                <div class="tree-dan">
+                    <img src="/img/julie.jpg" alt="Dan Photo" class="row3-photo">
+                    <p class="row3-caption dan-caption"><b>Daniel Bleaden</b> Charity Shop Worker</p>
+                </div>
             </div>
-            <div class="tree-jamie">
-                <img src="/img/Jamie 2.jpg" alt="Jamie Photo" class="row3-photo">
-                <p class="row3-caption jamie-caption"><b>Jamie Dillon</b> Web Developer</p>
+            <div class="glyn-kids">
+                <div class="tree-ro">
+                    <img src="/img/glyn.jpg" alt="Ro Photo" class="row3-photo">
+                    <p class="row3-caption ro-caption"><b>Ro Dillon</b> Education</p>
+                </div>
+                <div class="tree-hal">
+                    <img src="/img/glyn.jpg" alt="Hal Photo" class="row3-photo">
+                    <p class="row3-caption hal-caption"><b>Hal Dillon</b> Education</p>
+                </div>
             </div>
-            <div class="tree-emily">
-                <img src="/img/julie.jpg" alt="Emily Photo" class="row3-photo">
-                <p class="row3-caption emily-caption"><b>Emily Bleaden</b> Nursery Nurse</p>
-            </div>
-            <div class="tree-dan">
-                <img src="/img/julie.jpg" alt="Dan Photo" class="row3-photo">
-                <p class="row3-caption dan-caption"><b>Daniel Bleaden</b> Charity Shop Worker</p>
-            </div>
-            <div class="tree-ro">
-                <img src="/img/glyn.jpg" alt="Ro Photo" class="row3-photo">
-                <p class="row3-caption ro-caption"><b>Ro Dillon</b> Education</p>
-            </div>
-            <div class="tree-hal">
-                <img src="/img/glyn.jpg" alt="Hal Photo" class="row3-photo">
-                <p class="row3-caption hal-caption"><b>Hal Dillon</b> Education</p>
-            </div>
-
         </div>
     </div>
 
