--- a/src/gallery.html
+++ b/src/gallery.html
@@ -121,8 +121,8 @@ title: The Gallery
             </div>
             <div class="carousel__item">
                 <img src="/img/25 Umbilical Strangulation.jpg" alt="">
-                <p class="art-caption">“Umbilical Strangulation” Oil on board, 36″ x 20″. Exhibited in the 2013/14 Annual Exhibition held in the Municipal Art Gallery and Museum of Luton.</p> 
-                <p class="art-caption">Owing to the popularity of Bernard F. Dillon’s occasional side step into the realms of Surrealism there are very few to exhibit here. The vast majority of them are already in private collections.</p>
+                <p class="art-caption caption-25">“Umbilical Strangulation” Oil on board, 36″ x 20″. Exhibited in the 2013/14 Annual Exhibition held in the Municipal Art Gallery and Museum of Luton.</p> 
+                <p class="art-caption caption-25">Owing to the popularity of Bernard F. Dillon’s occasional side step into the realms of Surrealism there are very few to exhibit here. The vast majority of them are already in private collections.</p>
             </div>
             <div class="carousel__item">
                 <img src="/img/26 Young Glyn sketch.jpg" alt="">
