--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     </head>   
     <body>
         <div class="top-banner">
-            <h2 class="banner"><a href="http://localhost:8080/">Bernard Francis Dillon</a></h2>
+            <h2 class="banner"><a href="https://bernarddillon-britishartist.com/">Bernard Francis Dillon</a></h2>
             <div class="dropdown-header">
                 <a href="#" class="dropdown-icon">
                     <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
                 </a>
                 <ul class="dropdown-buttons">
                     <li class="dr-about-button">
-                        <a href="http://localhost:8080/about/" class="dr-about-button-text">About</a>
+                        <a href="https://bernarddillon-britishartist.com/about/" class="dr-about-button-text">About</a>
                     </li>
                     <li class="dr-awards-button">
-                        <a href="http://localhost:8080/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
+                        <a href="https://bernarddillon-britishartist.com/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
                     </li> 
                     <li class="dr-gallery-button">
-                        <a href="http://localhost:8080/gallery/" class="dr-gallery-button-text">The Gallery</a>
+                        <a href="https://bernarddillon-britishartist.com/gallery/" class="dr-gallery-button-text">The Gallery</a>
                     </li>    
                     <li class="dr-family-button"> 
-                        <a href="http://localhost:8080/family/" class="dr-family-button-text">Family Facts</a>
+                        <a href="https://bernarddillon-britishartist.com/family/" class="dr-family-button-text">Family Facts</a>
                     </li> 
                 </ul>                   
             </div>
@@ -35,16 +35,16 @@
         <div class="nav">
             <ul class="nav-buttons">
                 <li class="about-button">
-                    <a href="http://localhost:8080/about/" class="about-button-text">About</a>
+                    <a href="https://bernarddillon-britishartist.com/about/" class="about-button-text">About</a>
                 </li>    
                 <li class="awards-button">
-                    <a href="http://localhost:8080/awards/" class="awards-button-text">Awards & Exhibitions</a>
+                    <a href="https://bernarddillon-britishartist.com/awards/" class="awards-button-text">Awards & Exhibitions</a>
                 </li>    
                 <li class="gallery-button">
-                    <a href="http://localhost:8080/gallery/" class="gallery-button-text">The Gallery</a>
+                    <a href="https://bernarddillon-britishartist.com/gallery/" class="gallery-button-text">The Gallery</a>
                 </li>    
                 <li class="family-button"> 
-                    <a href="http://localhost:8080/family/" class="family-button-text">Family Facts</a>
+                    <a href="https://bernarddillon-britishartist.com/family/" class="family-button-text">Family Facts</a>
                 </li>    
             </ul>
         </div>    
