--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@ title: Home
             <p class="home-words">BRITISH ARTIST, Bernard Francis Dillon, was born in Paddington, London, during August 1940. His mother was from the mining valleys of South Wales whilst his father was a Londoner of Irish descent.</p>
 
             <div class="read-more-button-container">
-                <a href="http://localhost:8080/about/" class="read-more-button">READ MORE</a>  
+                <a href="/about" class="read-more-button">READ MORE</a>  
             </div>      
         </div>
 
@@ -63,7 +63,7 @@ title: Home
 
 
         <div class="view-gallery-button-container">
-            <a href="http://localhost:8080/gallery/" class="view-gallery-button">VIEW GALLERY</a>  
+            <a href="/gallery" class="view-gallery-button">VIEW GALLERY</a>  
         </div>
         
     </div>    
