deploy: 30aea292ea3ebc1d11b09f8a3b21307935f4a7ac

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="home-words">BRITISH ARTIST, Bernard Francis Dillon, was born in Paddington, London, during August 1940. His mother was from the mining valleys of South Wales whilst his father was a Londoner of Irish descent.</p>
 
             <div class="read-more-button-container">
-                <a href="http://localhost:8080/about/" class="read-more-button">READ MORE</a>  
+                <a href="/about" class="read-more-button">READ MORE</a>  
             </div>      
         </div>
 
@@ -110,7 +110,7 @@
 
 
         <div class="view-gallery-button-container">
-            <a href="http://localhost:8080/gallery/" class="view-gallery-button">VIEW GALLERY</a>  
+            <a href="/gallery" class="view-gallery-button">VIEW GALLERY</a>  
         </div>
         
     </div>    
