--- a/gallery/index.html
+++ b/gallery/index.html
@@ -23,7 +23,7 @@
                         <a href="/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
                     </li> 
                     <li class="dr-gallery-button">
-                        <a href="/gallery/" class="dr-gallery-button-text"> Gallery</a>
+                        <a href="/gallery/" class="dr-gallery-button-text"> The Gallery</a>
                     </li>    
                     <li class="dr-family-button"> 
                         <a href="/family/" class="dr-family-button-text">Family Facts</a>
@@ -266,7 +266,7 @@
         
         <footer>
             <div class="footer-section">
-                <p class="footer">All works © Bernard Francis Dillon 2022 | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
+                <p class="footer">All works © Bernard Francis Dillon  | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
             </div>    
         </footer> 
 
