deploy: 7814a03fe4cb7e5f84fce855e07968e34de9652a

--- a/about/index.html
+++ b/about/index.html
@@ -86,7 +86,7 @@
         
         <footer>
             <div class="footer-section">
-                <p class="footer">All works © Bernard Francis Dillon  | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
+                <p class="footer">All works © Bernard Francis Dillon 2022 | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
             </div>    
         </footer> 
 
