edit family tree card sizes

--- a/src/family.html
+++ b/src/family.html
@@ -41,7 +41,7 @@ title: Family Facts
             <div class="steve-kids">
                 <div class="tree-ant">
                     <img src="/img/Ant.jpg" alt="Ant photo" class="row3-photo">
-                    <p class="row3-caption ant-caption"><b>Anthony Dillon</b> Comp' Programmer</p>
+                    <p class="row3-caption ant-caption"><b>Ant Dillon</b> Computer Programmer</p>
                 </div>
                 <div class="tree-mark">
                     <img src="/img/Mark.jpg" alt="Mark Photo" class="row3-photo">
