--- a/src/family.html
+++ b/src/family.html
@@ -93,7 +93,7 @@ title: Family Facts
 
             <p class="row4-caption"><b>Jasper Dillon</b> Education</p>
 
-            <p class="row4-caption"><b>Kurtis Dillon</b> A baby</p> 
+            <p class="row4-caption"><b>Kurtis Dillon</b> Baby</p> 
         </div>    
     </div>
 
