deploy: 00bc08282e9c8042594f63e4b41aa9d92745f30b

--- a/family/index.html
+++ b/family/index.html
@@ -140,7 +140,7 @@
 
             <p class="row4-caption"><b>Jasper Dillon</b> Education</p>
 
-            <p class="row4-caption"><b>Kurtis Dillon</b> Baby</p> 
+            <p class="row4-caption kurtis-caption"><b>Kurtis Dillon</b> Baby</p> 
         </div>    
     </div>
 
