attempt add lightbox

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -28,7 +28,7 @@ title: The Gallery
         <div class="carousel">
             <div class="carousel__track-container">
             <div class="carousel__item carousel__item--visible">
-                <img src="/img/02 Bern Sr. drawing.jpg" alt="">
+                <a href="/img/02 Bern Sr. drawing.jpg" data-lightbox="mygallery" data-title="Bern Sr"><img src="/img/02 Bern Sr. drawing.jpg" alt=""></a> 
                 <p class="art-caption">A portrait of the artist's father, Bernard Francis Dillon Snr., drawn in 1973</p>
             </div>
             <div class="carousel__item">
