attempt add lightbox #2

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -32,7 +32,7 @@ title: The Gallery
                 <p class="art-caption">A portrait of the artist's father, Bernard Francis Dillon Snr., drawn in 1973</p>
             </div>
             <div class="carousel__item">
-                <img src="/img/03 Life Drawing.jpg" alt="" class="life-drawing">
+                <a href="/img/03 Life Drawing.jpg" data-lightbox="mygallery" data-title="Life drawing"><img src="/img/03 Life Drawing.jpg" alt="" class="life-drawing"></a> 
                 <p class="art-caption">A sample of Dillon’s student work from sixty-two years ago.</p>
             </div>
             <div class="carousel__item">
