--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bernard Francis Dillon</title>
         <link rel="stylesheet" href="/css/styles.css"/>
-        <link rel="stylesheet" type="text/css" href="css/lightbox.min.css"/>
+        <link rel="stylesheet" href="/css/lightbox.min.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     </head>   
     <body>
@@ -81,7 +81,7 @@
                 <p class="art-caption">A portrait of the artist's father, Bernard Francis Dillon Snr., drawn in 1973</p>
             </div>
             <div class="carousel__item">
-                <img src="/img/03 Life Drawing.jpg" alt="" class="life-drawing">
+                <a href="/img/03 Life Drawing.jpg" data-lightbox="mygallery" data-title="Life drawing"><img src="/img/03 Life Drawing.jpg" alt="" class="life-drawing"></a> 
                 <p class="art-caption">A sample of Dillon’s student work from sixty-two years ago.</p>
             </div>
             <div class="carousel__item">
