--- a/family/index.html
+++ b/family/index.html
@@ -7,6 +7,7 @@
         <title>Bernard Francis Dillon</title>
         <link rel="stylesheet" href="/css/styles.css"/>
         <link rel="stylesheet" href="/css/lightbox.min.css"/>
+        <link rel="stylesheet" href="/css/lightbox.css"/>
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     </head>   
